<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_mark">

    <fragment
        android:id="@+id/nav_mark"
        android:name="com.linux.dailyarticle.ui.home.HomeFragment"
        android:label="@string/menu_mark"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.linux.dailyarticle.ui.gallery.GalleryFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_vote"
        android:name="com.linux.dailyarticle.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_vote"
        tools:layout="@layout/fragment_slideshow" />
</navigation>